Changes from version 1.1.0 to version 2.0.0-pre1
------------------------------------------------

   - Added authentication support
   - Added new queries
   - Added support for submitting client version to the server during TRM submits
   - Updated client code for TRM B#er

Changes from version 1.0.1 to version 1.1.0
-------------------------------------------

   - Fixed an OpenBSD 3.0 compile problem
   - Updated libtool version to 1.4.2 in hopes to get it to build on OSX.
   - Added MBQ_Quick queries to support the MB Tagger
   - Fixed a bug in the TRM generation that caused different TRMs to be
     generated for subsequent runs on the same file.

Changes from version 1.0.0 to version 1.0.1
-------------------------------------------

   - Fixed the multi drive support under windows.
   - Added support for setting the depth of a query via GET methods.
   - Added SetDebug() function that allows the caller to set the
     debug mode. In debug mode the library will print the server
     URL, query and responses to stdout.
   - Fixed a few crash bugs in the bitzi id3/mp3 metadata code
   - Changed the bitzi plugin manager to not load plugins, in order
     to avoid the unecessary dependency on dlopen/dlsym/dlclose.
   - Removed a bunch of generates files from the CVS archive.