@@ -21,10 +21,13 @@
 #
 AUTOMAKE_OPTIONS = foreign
 
+SUBDIRS = bitzi
+INCLUDES = -I$(srcdir)/bitzi
 lib_LTLIBRARIES = libmusicbrainz.la
+
 libmusicbrainz_la_SOURCES = base64.c base64.h musicbrainz.cpp musicbrainz.h diskid.cpp diskid.h errors.h http.cpp http.h sha1.h sha1.c types.h mb.cpp signature.cpp signature.h comhttpsocket.cpp comhttpsocket.h comsocket.cpp comsocket.h haar.cpp haar.h sigxdr.cpp sigxdr.h sigclient.cpp sigclient.h sigfft.cpp audiosig.h sigcomplex.h sigfft.h mb.h c_wrapper.cpp mb_c.h uuid.cpp rdfparse.c rdfparse.h rdfextract.cpp rdfextract.h 
 libmusicbrainz_la_LDFLAGS = -version-info 2:0:0
-libmusicbrainz_la_LIBADD = ../expat/xmlparse/libxmlparse.la ../expat/xmltok/libxmltok.la @EXTRA_CPP_LIBS@
+libmusicbrainz_la_LIBADD = ../expat/xmlparse/libxmlparse.la ../expat/xmltok/libxmltok.la bitzi/libbitzi.la @EXTRA_CPP_LIBS@
 
 noinst_HEADERS = audiosig.h base64.h diskid.h http.h sha1.h sigfft.h sigcomplex.h types.h parse.h uuid.h 
 
